--- a/src/components/landing/Gallery.astro
+++ b/src/components/landing/Gallery.astro
@@ -14,7 +14,7 @@ await Astro.glob('/src/assets/images/eventpic/*.{jpg,JPG}').then((files) => {
     <div class="flex gap-4 h-[75%] m-auto image-row">
       {
         images.map((img) => {
-          return <Image src={img} alt="fndf" />;
+          return <Image src={img} alt="gallery" />;
         })
       }
     </div>
@@ -22,7 +22,7 @@ await Astro.glob('/src/assets/images/eventpic/*.{jpg,JPG}').then((files) => {
     <div class="flex gap-4 h-[75%] m-auto image-row">
       {
         images.map((img) => {
-          return <Image src={img} alt="fndf" />;
+          return <Image src={img} alt="gallery" />;
         })
       }
     </div>
@@ -30,7 +30,7 @@ await Astro.glob('/src/assets/images/eventpic/*.{jpg,JPG}').then((files) => {
     <div class="flex gap-4 h-[75%] m-auto image-row">
       {
         images.map((img) => {
-          return <Image src={img} alt="fndf" />;
+          return <Image src={img} alt="gallery" />;
         })
       }
     </div>
