--- a/src/pages/blogs/new.astro
+++ b/src/pages/blogs/new.astro
@@ -10,7 +10,7 @@ if (!session?.user) {
 }
 ---
 
-<Layout title='ACE blog-new'>
+<Layout title='ACE | Create Blog'>
   <div class="mt-20">
     <BlogEditor id="new" />
   </div>
