--- a/src/components/GalleryHero.astro
+++ b/src/components/GalleryHero.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from 'astro:assets'
+import { Image } from 'astro:assets';
 let images: ImageMetadata[] = [];
 
 await Astro.glob('/src/assets/images/eventpic/*.{jpg,JPG}').then((files) => {
@@ -22,7 +22,7 @@ await Astro.glob('/src/assets/images/eventpic/*.{jpg,JPG}').then((files) => {
       <Image src={images[1]} alt="" class="layer-img" style="bottom:10%; left:70%;" loading="lazy" />
     </div>
   </div>
-  
+
   <div data-depth="0.6" id="layer3" class="layer">
     <div class="flex justify-around items-center m-auto w-full h-full">
       <Image src={images[5]} alt="" class="layer-img" loading="lazy" />
@@ -35,9 +35,8 @@ await Astro.glob('/src/assets/images/eventpic/*.{jpg,JPG}').then((files) => {
     width: 100%;
     height: 100vh;
     position: relative;
-   
   }
-  
+
   section > div {
     width: 100%;
     height: 100%;
@@ -98,8 +97,6 @@ await Astro.glob('/src/assets/images/eventpic/*.{jpg,JPG}').then((files) => {
 
 <script>
   import Parallax from 'parallax-js';
-  document.addEventListener('DOMContentLoaded', () => {
-    const scene = document.getElementById('scene') as HTMLDivElement;
-    new Parallax(scene);
-  });
+  const scene = document.getElementById('scene') as HTMLDivElement;
+  new Parallax(scene);
 </script>
